# hermes-webui-desktop

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
frontend/: index.html
icons/: icon.icns
src/: main.rs
