[package]
name = "hermes-webui-desktop"
version = "0.1.0"
description = "Desktop wrapper for Hermes WebUI"
authors = ["ama"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
